--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<title>Rock, paper, scissors</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 <body>
-	<h1>Rock, paper, scissors</h1>
-	<br>
+	<header>
+		<h1>Rock, paper, scissors</h1>
+	</header>
 
 	<input type="input" name="user-input" id="user-input" placeholder="Rock, paper, scissors?" autofocus></input>
 	<button id="submit-choice">!</button>
-
-	<p>Your choice is: 
-		<div id="user-choice"></div>
-	</p>
-	<p>The computer's choice is: 
+	<p><i class="fas fa-user-astronaut"></i> Your choice is: 	
+		<div id="user-choice"></p></div>
+	
+	<p><i class="fas fa-desktop"></i> The computer's choice is: 
 		<div id="computer-choice"></div>
 	</p>
-	<p>The result is:
+	
+	<p><i class="fas fa-poll"></i> The result is:
 		<div id="winner"></div>
 	</p>
 
