--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1>Rock, paper, scissors</h1>
 	</header>
 
-	<input type="input" name="user-input" id="user-input" placeholder="Rock, paper, scissors?" autofocus></input>
+	<input type="input" name="user-input" id="user-input" placeholder="Rock, paper, scissors?" autofocus onfocus="this.select()"></input>
 	<button id="submit-choice">!</button>
 	<p><i class="fas fa-user-astronaut"></i> Your choice is: 	
 		<div id="user-choice"></p></div>
