--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 		<h1>Rock, paper, scissors</h1>
 	</header>
 
-	<input type="input" name="user-input" id="user-input" placeholder="Rock, paper, scissors?" autofocus onfocus="this.select()"></input>
+	<input type="input" name="user-input" id="user-input" placeholder="rock, paper, scissors?" autofocus onfocus="this.select()"></input>
 	<button id="submit-choice">!</button>
-	<p><i class="fas fa-user-astronaut"></i> Your choice is: 	
+	<p><i class="fas fa-user-astronaut fa-lg"></i> Your choice is: 	
 		<div id="user-choice"></p></div>
 	
-	<p><i class="fas fa-desktop"></i> The computer's choice is: 
+	<p><i class="fas fa-desktop fa-lg"></i> The computer's choice is: 
 		<div id="computer-choice"></div>
 	</p>
 	
-	<p><i class="fas fa-poll"></i> The result is:
+	<p><i class="fas fa-poll fa-lg"></i> The result is:
 		<div id="winner"></div>
 	</p>
 
