added auto scroll to bottom

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
 	<input type="input" name="user-input" id="user-input" placeholder="rock, paper, scissors?" autofocus onfocus="this.select()"></input>
 	<button id="submit-choice">!</button>
-	<p><i class="fas fa-user-astronaut fa-lg"></i> Your choice is: 	
-		<div id="user-choice"></p></div>
+	<div class="results">
+		<p><i class="fas fa-user-astronaut fa-lg"></i> Your choice is: 	
+		<div id="user-choice"></div></p>
 	
-	<p><i class="fas fa-desktop fa-lg"></i> The computer's choice is: 
-		<div id="computer-choice"></div>
-	</p>
+		<p><i class="fas fa-desktop fa-lg"></i> The computer's choice is: 
+		<div id="computer-choice"></div></p>
 	
-	<p><i class="fas fa-poll fa-lg"></i> The result is:
-		<div id="winner"></div>
-	</p>
+		<p><i class="fas fa-poll fa-lg"></i> The result is:
+		<div id="winner"></div></p>
+	</div>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
